examples/test/testpolicy2866.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2866
  namespace: namespace76
spec:
  podSelector:
    matchLabels:
      key4: value33
      key9: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value35
          key12: value39
          key30: value32
      podSelector:
        matchLabels:
          key9: value1
